BoardList width 변경

--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/MemoEngine/DotNetNote/MyFiles/스크린샷 2024-04-06 000149.png
+/MemoEngine/DotNetNote/MyFiles/imageTest.png
